Pagination fix, page number
Added:
– page number is now being displayed
Fixed:
– pagination stops properly at the end (as client is now aware of the
quantity of posts on the server)
Misc:
– quick whatever edit in CSS: vertical limiting display of images so
they don’t take too much space.
– removed graphics editor packages as these are not being used at the
moment

--- a/client/style.css
+++ b/client/style.css
@@ -20,7 +20,8 @@ body {
 	border-right: 1px solid #ccc;
 	padding: 6px;
 	overflow-x: hidden;
-
+	max-height: 144px;
+	overflow-y: hidden;
 }
 
 h1 {
